Show right-aligned images in plugin content readme at 48% width to avoid colision with the newly added border

--- a/plugins/Marketplace/stylesheets/plugin-details.less
+++ b/plugins/Marketplace/stylesheets/plugin-details.less
@@ -330,7 +330,7 @@
         }
 
         .right-div-readme {
-            flex-grow: 1; width: 50%;
+            width: 48%;
         }
 
         .plugin-metadata-part2 {
